--- a/app/templates/checkpurchaseorder.html
+++ b/app/templates/checkpurchaseorder.html
@@ -10,7 +10,23 @@
     <hr>
     {% for all_purchaseorder in all_purchaseorder %}
     <p>
-        {{all_purchaseorder.orderdate}}
+        {{all_purchaseorder.orderdate.label}}:{{all_purchaseorder.orderdate}}
+        {{all_purchaseorder.expirationdate.label}}:{{all_purchaseorder.expirationdate}}<br />
+        {{all_purchaseorder.deliverydate.label}}:{{all_purchaseorder.deliverydate}}
+        {{all_purchaseorder.customerid.label}}:{{all_purchaseorder.customerid}}<br />
+        {{all_purchaseorder.customername.label}}:{{all_purchaseorder.customername}}
+        {{all_purchaseorder.orderfrom.label}}:{{all_purchaseorder.orderfrom}}<br />
+        {{all_purchaseorder.orderto.label}}:{{all_purchaseorder.orderto}}
+        {{all_purchaseorder.ordervia.label}}:{{all_purchaseorder.ordervia}}<br />
+        {{all_purchaseorder.insurance.label}}:{{all_purchaseorder.insurance}}
+        {{all_purchaseorder.remarks1.label}}:{{all_purchaseorder.remarks1}}<br />
+        {{all_purchaseorder.remarks2.label}}:{{all_purchaseorder.remarks2}}
+        {{all_purchaseorder.incoterms.label}}:{{all_purchaseorder.incoterms}}<br />
+        {{all_purchaseorder.signedorder.label}}:{{all_purchaseorder.signedorder}}
+        {{all_purchaseorder.remarks.label}}:{{all_purchaseorder.remarks}}<br />
+        {{all_purchaseorder.expenseitem.label}}:{{all_purchaseorder.expenseitem}}
+        {{all_purchaseorder.expensecost.label}}:{{all_purchaseorder.expensecost}}
+        {{all_purchaseorder.submit}}
     </p>
     <hr>
     {% endfor %}
