--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -8,7 +8,7 @@
 <body>
     <ul>
        <li>
-           <a href="{{ url_for('index') }}">Purchase Order Page</a>
+           <a href="{{ url_for('index') }}">Purchase Order Page</a><br/>
            <a href="{{ url_for('checkpurchaseorder') }}">Check Puchase Order Page</a>
        </li>
     </ul>
