--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -15,10 +15,11 @@
     <header>
         <div class="container clearfix">
             <h1 id="logo">
-                Trading System
+                <a href="{{ url_for('home') }}">Trading System</a>
             </h1>
             <nav>
                 <a href="{{ url_for('login') }}">Login</a>
+                <a href="{{ url_for('home') }}">Home</a>
             </nav>
         </div>
     </header><!-- /header -->
