--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <html>
 
-{% block head %}{% endblock %}
+    <header>
+        <div class="container clearfix">
+            <h1 id="logo">
+                <a href="{{ url_for('home') }}">Trading System</a>
+            </h1>
+            <nav>
+                <a href="{{ url_for('login') }}">Login</a>
+                <a href="{{ url_for('home') }}">Home</a>
+            </nav>
+        </div>
+    </header><!-- /header -->
 
 <body>
     <p>
@@ -26,7 +36,7 @@
             <button onclick="location.href='history.back()'">追加・戻る</button>
         </form>
     </p>
-    
+
     <h1>Check the purchase order</h1>
     <hr>
     {% for all_purchaseorder in all_purchaseorder %}
