--- a/app/static/stylesheet.css
+++ b/app/static/stylesheet.css
@@ -48,7 +48,7 @@ header {
     width: 100%;
     height: 150px;
     overflow: hidden;
-    position: fixed;
+    /*position: fixed;*/
     top: 0;
     left: 0;
     z-index: 999;
@@ -69,8 +69,8 @@ header h1#logo a {
     font-size: 60px;
     color: white;
     font-weight: 400;
-    position: relative; top: 15px;
-    position: relative; left: 15px;
+    /*position: relative; top: 15px;
+    position: relative; left: 15px;*/
 }
 
 header nav {
