--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -24,8 +24,8 @@
         </div>
     </header><!-- /header -->
     <div class="home-button">
-       <button onclick="location.href='./index'">Purchase Order Input</button>
-       <button onclick="location.href='./checkpurchaseorder'">Purchase Order Check</button>
+       <button class="button col-md-6 float-right" onclick="location.href='./index'">Purchase Order Input</button>
+       <button class="button col-md-6" onclick="location.href='./checkpurchaseorder'">Purchase Order Check</button>
     </div>
 </body>
 
