--- a/app/static/stylesheet.css
+++ b/app/static/stylesheet.css
@@ -61,6 +61,7 @@
 
 /* home画面のCSS終了 */
 
+/* ヘッダーCSS */
 header {
     width: 100%;
     height: 120px;
@@ -115,4 +116,20 @@ header.smaller h1#logo {
 
 header.smaller nav a {
     line-height: 75px;
+}
+/* ヘッダーCSS終了 */
+
+.DivLink {
+    position:relative;
+    background-color: darkgray;
+    border:1px solid black;
+}
+
+.DivLink .Link {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
