--- a/app/static/stylesheet.css
+++ b/app/static/stylesheet.css
@@ -133,3 +133,13 @@ header.smaller nav a {
     width: 100%;
     height: 100%;
 }
+
+/* check purchase order */
+.orderid {
+    font-size: 30px;
+    height: 100%;
+    width: 48px;
+    float: left;
+    border-right:1px black;
+    padding-right: 5px;
+}
